--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,15 @@
-hello world
+<!doctype html> 
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Socket.io Basics</title>
+</head>
+<body>
+	<script src="/js/jquery-2.1.4.min.js"></script>
+	<script src="/js/socket.io-1.3.7.js"></script>
+
+	<script type="text/javascript">
+		var socket = io(); // io() is defined by the socket.io script above
+	</script>
+</body>
+</html>
