--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,6 @@
 <body>
 	<script src="/js/jquery-2.1.4.min.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
-
-	<script type="text/javascript">
-		var socket = io(); // io() is defined by the socket.io script above
-	</script>
+	<script src="/js/app.js"></script>
 </body>
 </html>
